@@ -24,9 +24,9 @@
 
 package org.jvnet.hudson.plugins.groovypostbuild;
 
-import static org.junit.Assert.*;
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.junit.jupiter.api.Assertions.*;
 
-import com.google.common.base.Function;
 import com.google.common.collect.Lists;
 import com.jenkinsci.plugins.badge.action.AbstractBadgeAction;
 import com.jenkinsci.plugins.badge.action.BadgeAction;
@@ -46,29 +46,25 @@ import hudson.model.User;
 import hudson.util.VersionNumber;
 import java.util.Arrays;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 import jenkins.security.QueueItemAuthenticatorConfiguration;
-import org.acegisecurity.Authentication;
 import org.apache.commons.lang.StringUtils;
 import org.hamcrest.Matchers;
 import org.jenkinsci.plugins.scriptsecurity.sandbox.groovy.SecureGroovyScript;
-import org.jenkinsci.plugins.scriptsecurity.scripts.ClasspathEntry;
 import org.jenkinsci.plugins.scriptsecurity.scripts.ScriptApproval;
-import org.junit.Rule;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.jvnet.hudson.test.FailureBuilder;
 import org.jvnet.hudson.test.Issue;
 import org.jvnet.hudson.test.JenkinsRule;
 import org.jvnet.hudson.test.MockAuthorizationStrategy;
 import org.jvnet.hudson.test.MockQueueItemAuthenticator;
 import org.jvnet.hudson.test.UnstableBuilder;
+import org.jvnet.hudson.test.junit.jupiter.WithJenkins;
 import org.jvnet.hudson.test.recipes.LocalData;
 
-public class GroovyPostbuildRecorderTest {
-    @Rule
-    public JenkinsRule j = new JenkinsRule();
+@WithJenkins
+class GroovyPostbuildRecorderTest {
 
     private static final String TEXT_ON_FAILED = "Groovy";
 
@@ -97,16 +93,21 @@ public class GroovyPostbuildRecorderTest {
             .replace("jenkins-!-color-dark-indigo", "jenkins-!-error-color")
             .replace("jenkins-!-success-color", "jenkins-!-color-dark-blue");
 
+    private JenkinsRule j;
+
+    @BeforeEach
+    void setUp(JenkinsRule rule) {
+        j = rule;
+    }
+
     @Test
-    public void testMatrixProjectWithParent() throws Exception {
+    void testMatrixProjectWithParent() throws Exception {
         MatrixProject p = j.createProject(MatrixProject.class);
         AxisList axisList = new AxisList(new TextAxis("axis1", "value1", "value2"));
         p.setAxes(axisList);
         p.getPublishersList()
                 .add(new GroovyPostbuildRecorder(
-                        new SecureGroovyScript(SCRIPT_FOR_MATRIX, true, Collections.<ClasspathEntry>emptyList()),
-                        2,
-                        true));
+                        new SecureGroovyScript(SCRIPT_FOR_MATRIX, true, Collections.emptyList()), 2, true));
 
         MatrixBuild b = p.scheduleBuild2(0).get();
         j.assertBuildStatusSuccess(b);
@@ -125,15 +126,13 @@ public class GroovyPostbuildRecorderTest {
     }
 
     @Test
-    public void testMatrixProjectWithoutParent() throws Exception {
+    void testMatrixProjectWithoutParent() throws Exception {
         MatrixProject p = j.createProject(MatrixProject.class);
         AxisList axisList = new AxisList(new TextAxis("axis1", "value1", "value2"));
         p.setAxes(axisList);
         p.getPublishersList()
                 .add(new GroovyPostbuildRecorder(
-                        new SecureGroovyScript(SCRIPT_FOR_MATRIX2, true, Collections.<ClasspathEntry>emptyList()),
-                        2,
-                        false));
+                        new SecureGroovyScript(SCRIPT_FOR_MATRIX2, true, Collections.emptyList()), 2, false));
 
         MatrixBuild b = p.scheduleBuild2(0).get();
         j.assertBuildStatusSuccess(b);
@@ -159,7 +158,7 @@ public class GroovyPostbuildRecorderTest {
      * @throws Exception
      */
     @Test
-    public void testBehaviorNotAffectWithSucceedingBuildSucceedingScript() throws Exception {
+    void testBehaviorNotAffectWithSucceedingBuildSucceedingScript() throws Exception {
         List<Integer> behaviors = Arrays.asList(0, 1, 2);
         for (int behavior : behaviors) {
             FreeStyleProject p = j.createFreeStyleProject();
@@ -169,7 +168,7 @@ public class GroovyPostbuildRecorderTest {
                             new SecureGroovyScript(
                                     "manager.addShortText('testing', null, null, null, null);",
                                     true,
-                                    Collections.<ClasspathEntry>emptyList()),
+                                    Collections.emptyList()),
                             behavior, // behavior
                             false // runForMatrixParent
                             ));
@@ -188,7 +187,7 @@ public class GroovyPostbuildRecorderTest {
      * @throws Exception
      */
     @Test
-    public void testBehaviorNotAffectWithUnstableBuildSuceedingScript() throws Exception {
+    void testBehaviorNotAffectWithUnstableBuildSuceedingScript() throws Exception {
         List<Integer> behaviors = Arrays.asList(0, 1, 2);
         for (int behavior : behaviors) {
             FreeStyleProject p = j.createFreeStyleProject();
@@ -197,8 +196,7 @@ public class GroovyPostbuildRecorderTest {
 
             p.getPublishersList()
                     .add(new GroovyPostbuildRecorder(
-                            new SecureGroovyScript(
-                                    "manager.addShortText('testing');", true, Collections.<ClasspathEntry>emptyList()),
+                            new SecureGroovyScript("manager.addShortText('testing');", true, Collections.emptyList()),
                             behavior, // behavior
                             false // runForMatrixParent
                             ));
@@ -217,7 +215,7 @@ public class GroovyPostbuildRecorderTest {
      * @throws Exception
      */
     @Test
-    public void testBehaviorNotAffectWithFailingBuildSuceedingScript() throws Exception {
+    void testBehaviorNotAffectWithFailingBuildSuceedingScript() throws Exception {
         List<Integer> behaviors = Arrays.asList(0, 1, 2);
         for (int behavior : behaviors) {
             FreeStyleProject p = j.createFreeStyleProject();
@@ -226,8 +224,7 @@ public class GroovyPostbuildRecorderTest {
 
             p.getPublishersList()
                     .add(new GroovyPostbuildRecorder(
-                            new SecureGroovyScript(
-                                    "manager.addShortText('testing');", true, Collections.<ClasspathEntry>emptyList()),
+                            new SecureGroovyScript("manager.addShortText('testing');", true, Collections.emptyList()),
                             behavior, // behavior
                             false // runForMatrixParent
                             ));
@@ -246,12 +243,12 @@ public class GroovyPostbuildRecorderTest {
      * @throws Exception
      */
     @Test
-    public void testBehaviorDoNothingWithSucceedingBuildFailingScript() throws Exception {
+    void testBehaviorDoNothingWithSucceedingBuildFailingScript() throws Exception {
         FreeStyleProject p = j.createFreeStyleProject();
 
         p.getPublishersList()
                 .add(new GroovyPostbuildRecorder(
-                        new SecureGroovyScript("blahblahblah", true, Collections.<ClasspathEntry>emptyList()),
+                        new SecureGroovyScript("blahblahblah", true, Collections.emptyList()),
                         0, // behavior
                         false // runForMatrixParent
                         ));
@@ -269,14 +266,14 @@ public class GroovyPostbuildRecorderTest {
      * @throws Exception
      */
     @Test
-    public void testBehaviorDoNothingWithUnstableBuildFailingScript() throws Exception {
+    void testBehaviorDoNothingWithUnstableBuildFailingScript() throws Exception {
         FreeStyleProject p = j.createFreeStyleProject();
 
         p.getBuildersList().add(new UnstableBuilder());
 
         p.getPublishersList()
                 .add(new GroovyPostbuildRecorder(
-                        new SecureGroovyScript("blahblahblah", true, Collections.<ClasspathEntry>emptyList()),
+                        new SecureGroovyScript("blahblahblah", true, Collections.emptyList()),
                         0, // behavior
                         false // runForMatrixParent
                         ));
@@ -294,14 +291,14 @@ public class GroovyPostbuildRecorderTest {
      * @throws Exception
      */
     @Test
-    public void testBehaviorDoNothingWithFailingBuildFailingScript() throws Exception {
+    void testBehaviorDoNothingWithFailingBuildFailingScript() throws Exception {
         FreeStyleProject p = j.createFreeStyleProject();
 
         p.getBuildersList().add(new FailureBuilder());
 
         p.getPublishersList()
                 .add(new GroovyPostbuildRecorder(
-                        new SecureGroovyScript("blahblahblah", true, Collections.<ClasspathEntry>emptyList()),
+                        new SecureGroovyScript("blahblahblah", true, Collections.emptyList()),
                         0, // behavior
                         false // runForMatrixParent
                         ));
@@ -319,12 +316,12 @@ public class GroovyPostbuildRecorderTest {
      * @throws Exception
      */
     @Test
-    public void testBehaviorMarkUnstableWithSucceedingBuildFailingScript() throws Exception {
+    void testBehaviorMarkUnstableWithSucceedingBuildFailingScript() throws Exception {
         FreeStyleProject p = j.createFreeStyleProject();
 
         p.getPublishersList()
                 .add(new GroovyPostbuildRecorder(
-                        new SecureGroovyScript("blahblahblah", true, Collections.<ClasspathEntry>emptyList()),
+                        new SecureGroovyScript("blahblahblah", true, Collections.emptyList()),
                         1, // behavior
                         false // runForMatrixParent
                         ));
@@ -342,14 +339,14 @@ public class GroovyPostbuildRecorderTest {
      * @throws Exception
      */
     @Test
-    public void testBehaviorMarkUnstableWithUnstableBuildFailingScript() throws Exception {
+    void testBehaviorMarkUnstableWithUnstableBuildFailingScript() throws Exception {
         FreeStyleProject p = j.createFreeStyleProject();
 
         p.getBuildersList().add(new UnstableBuilder());
 
         p.getPublishersList()
                 .add(new GroovyPostbuildRecorder(
-                        new SecureGroovyScript("blahblahblah", true, Collections.<ClasspathEntry>emptyList()),
+                        new SecureGroovyScript("blahblahblah", true, Collections.emptyList()),
                         1, // behavior
                         false // runForMatrixParent
                         ));
@@ -367,14 +364,14 @@ public class GroovyPostbuildRecorderTest {
      * @throws Exception
      */
     @Test
-    public void testBehaviorMarkUnstableWithFailingBuildFailingScript() throws Exception {
+    void testBehaviorMarkUnstableWithFailingBuildFailingScript() throws Exception {
         FreeStyleProject p = j.createFreeStyleProject();
 
         p.getBuildersList().add(new FailureBuilder());
 
         p.getPublishersList()
                 .add(new GroovyPostbuildRecorder(
-                        new SecureGroovyScript("blahblahblah", true, Collections.<ClasspathEntry>emptyList()),
+                        new SecureGroovyScript("blahblahblah", true, Collections.emptyList()),
                         1, // behavior
                         false // runForMatrixParent
                         ));
@@ -392,12 +389,12 @@ public class GroovyPostbuildRecorderTest {
      * @throws Exception
      */
     @Test
-    public void testBehaviorMarkFailedWithSucceedingBuildFailingScript() throws Exception {
+    void testBehaviorMarkFailedWithSucceedingBuildFailingScript() throws Exception {
         FreeStyleProject p = j.createFreeStyleProject();
 
         p.getPublishersList()
                 .add(new GroovyPostbuildRecorder(
-                        new SecureGroovyScript("blahblahblah", true, Collections.<ClasspathEntry>emptyList()),
+                        new SecureGroovyScript("blahblahblah", true, Collections.emptyList()),
                         2, // behavior
                         false // runForMatrixParent
                         ));
@@ -415,14 +412,14 @@ public class GroovyPostbuildRecorderTest {
      * @throws Exception
      */
     @Test
-    public void testBehaviorMarkFailedWithUnstableBuildFailingScript() throws Exception {
+    void testBehaviorMarkFailedWithUnstableBuildFailingScript() throws Exception {
         FreeStyleProject p = j.createFreeStyleProject();
 
         p.getBuildersList().add(new UnstableBuilder());
 
         p.getPublishersList()
                 .add(new GroovyPostbuildRecorder(
-                        new SecureGroovyScript("blahblahblah", true, Collections.<ClasspathEntry>emptyList()),
+                        new SecureGroovyScript("blahblahblah", true, Collections.emptyList()),
                         2, // behavior
                         false // runForMatrixParent
                         ));
@@ -440,14 +437,14 @@ public class GroovyPostbuildRecorderTest {
      * @throws Exception
      */
     @Test
-    public void testBehaviorMarkFailedWithFailingBuildFailingScript() throws Exception {
+    void testBehaviorMarkFailedWithFailingBuildFailingScript() throws Exception {
         FreeStyleProject p = j.createFreeStyleProject();
 
         p.getBuildersList().add(new FailureBuilder());
 
         p.getPublishersList()
                 .add(new GroovyPostbuildRecorder(
-                        new SecureGroovyScript("blahblahblah", true, Collections.<ClasspathEntry>emptyList()),
+                        new SecureGroovyScript("blahblahblah", true, Collections.emptyList()),
                         2, // behavior
                         false // runForMatrixParent
                         ));
@@ -459,7 +456,7 @@ public class GroovyPostbuildRecorderTest {
 
     @Test
     @LocalData
-    public void testBadgeMigration() throws Exception {
+    void testBadgeMigration() throws Exception {
         j.jenkins.setMarkupFormatter(RawHtmlMarkupFormatter.INSTANCE);
 
         FreeStyleProject p = j.jenkins.getItemByFullName("groovy-postbuild-2.3.1", FreeStyleProject.class);
@@ -523,7 +520,7 @@ public class GroovyPostbuildRecorderTest {
     }
 
     @Test
-    public void testAddShortText() throws Exception {
+    void testAddShortText() throws Exception {
         FreeStyleProject p = j.createFreeStyleProject();
 
         p.getPublishersList()
@@ -531,7 +528,7 @@ public class GroovyPostbuildRecorderTest {
                         new SecureGroovyScript(
                                 "manager.addShortText('some-badge-text');",
                                 true, // sandbox
-                                Collections.<ClasspathEntry>emptyList()),
+                                Collections.emptyList()),
                         2, // behavior
                         false // runForMatrixParent
                         ));
@@ -542,7 +539,7 @@ public class GroovyPostbuildRecorderTest {
     }
 
     @Test
-    public void testAddShortTextHtmlIsEscaped() throws Exception {
+    void testAddShortTextHtmlIsEscaped() throws Exception {
         // This test is to make it clear that
         // addShortText() doesn't allow HTMLs
         // even though that implementation is
@@ -554,7 +551,7 @@ public class GroovyPostbuildRecorderTest {
                         new SecureGroovyScript(
                                 "manager.addShortText('<div id=\"should-be-escaped\">foobar</div>');",
                                 true, // sandbox
-                                Collections.<ClasspathEntry>emptyList()),
+                                Collections.emptyList()),
                         2, // behavior
                         false // runForMatrixParent
                         ));
@@ -563,7 +560,7 @@ public class GroovyPostbuildRecorderTest {
     }
 
     @Test
-    public void testAddHtmlBadge() throws Exception {
+    void testAddHtmlBadge() throws Exception {
         FreeStyleProject p = j.createFreeStyleProject();
 
         p.getPublishersList()
@@ -571,7 +568,7 @@ public class GroovyPostbuildRecorderTest {
                         new SecureGroovyScript(
                                 "manager.addHtmlBadge('<div id=\"added-as-badge\">foobar</div>');",
                                 true, // sandbox
-                                Collections.<ClasspathEntry>emptyList()),
+                                Collections.emptyList()),
                         2, // behavior
                         false // runForMatrixParent
                         ));
@@ -582,7 +579,7 @@ public class GroovyPostbuildRecorderTest {
     }
 
     @Test
-    public void testAddHtmlBadgeForUnsafeHtml() throws Exception {
+    void testAddHtmlBadgeForUnsafeHtml() throws Exception {
         // This test is to make it sure that
         // addHtmlBadge() doesn't allow danger HTMLs
         // even though that implementation is
@@ -594,7 +591,7 @@ public class GroovyPostbuildRecorderTest {
                         new SecureGroovyScript(
                                 "manager.addHtmlBadge('<script id=\"should-be-untainted\">alert(\"exploit!\");</script>');",
                                 true, // sandbox
-                                Collections.<ClasspathEntry>emptyList()),
+                                Collections.emptyList()),
                         2, // behavior
                         false // runForMatrixParent
                         ));
@@ -605,7 +602,7 @@ public class GroovyPostbuildRecorderTest {
     }
 
     @Test
-    public void testRemoveBadge() throws Exception {
+    void testRemoveBadge() throws Exception {
         FreeStyleProject p = j.createFreeStyleProject();
 
         p.getPublishersList()
@@ -614,27 +611,20 @@ public class GroovyPostbuildRecorderTest {
                                 """
                                 manager.addShortText('test1');
                                 manager.addShortText('test2');
-                                manager.removeBadge(0);\
+                                manager.removeBadge(0);
                                 """,
                                 true, // sandbox
-                                Collections.<ClasspathEntry>emptyList()),
+                                Collections.emptyList()),
                         2, // behavior
                         false // runForMatrixParent
                         ));
 
         FreeStyleBuild b = j.assertBuildStatusSuccess(p.scheduleBuild2(0));
-        assertEquals(
-                Arrays.asList("test2"),
-                Lists.transform(b.getActions(BadgeAction.class), new Function<BadgeAction, String>() {
-                    @Override
-                    public String apply(BadgeAction badge) {
-                        return badge.getText();
-                    }
-                }));
+        assertEquals(List.of("test2"), Lists.transform(b.getActions(BadgeAction.class), AbstractBadgeAction::getText));
     }
 
     @Test
-    public void testRemoveBadges() throws Exception {
+    void testRemoveBadges() throws Exception {
         FreeStyleProject p = j.createFreeStyleProject();
 
         p.getPublishersList()
@@ -643,10 +633,10 @@ public class GroovyPostbuildRecorderTest {
                                 """
                                 manager.addShortText('test1');
                                 manager.addShortText('test2');
-                                manager.removeBadges();\
+                                manager.removeBadges();
                                 """,
                                 true, // sandbox
-                                Collections.<ClasspathEntry>emptyList()),
+                                Collections.emptyList()),
                         2, // behavior
                         false // runForMatrixParent
                         ));
@@ -656,7 +646,7 @@ public class GroovyPostbuildRecorderTest {
     }
 
     @Test
-    public void testRemoveBadgeForHtmlBadge() throws Exception {
+    void testRemoveBadgeForHtmlBadge() throws Exception {
         // removeBadge() also removes HtmlBadges
         FreeStyleProject p = j.createFreeStyleProject();
 
@@ -666,21 +656,20 @@ public class GroovyPostbuildRecorderTest {
                                 """
                                 manager.addHtmlBadge('test1');
                                 manager.addShortText('test2');
-                                manager.removeBadge(0);\
+                                manager.removeBadge(0);
                                 """,
                                 true, // sandbox
-                                Collections.<ClasspathEntry>emptyList()),
+                                Collections.emptyList()),
                         2, // behavior
                         false // runForMatrixParent
                         ));
 
         FreeStyleBuild b = j.assertBuildStatusSuccess(p.scheduleBuild2(0));
-        assertEquals(
-                Arrays.asList("test2"), Lists.transform(b.getActions(BadgeAction.class), AbstractBadgeAction::getText));
+        assertEquals(List.of("test2"), Lists.transform(b.getActions(BadgeAction.class), AbstractBadgeAction::getText));
     }
 
     @Test
-    public void testRemoveSummary() throws Exception {
+    void testRemoveSummary() throws Exception {
         j.jenkins.setMarkupFormatter(RawHtmlMarkupFormatter.INSTANCE);
 
         String template = "method org.jvnet.hudson.plugins.groovypostbuild.GroovyPostbuildRecorder$BadgeManager %s";
@@ -693,21 +682,21 @@ public class GroovyPostbuildRecorderTest {
                                 """
                                 manager.createSummary('attribute.png').appendText('Test1', false, false, false, 'Black');
                                 manager.createSummary('attribute.png').appendText('Test2', false, false, false, 'Black');
-                                manager.removeSummary(0);\
+                                manager.removeSummary(0);
                                 """,
                                 true,
-                                Collections.<ClasspathEntry>emptyList()),
+                                Collections.emptyList()),
                         2, // behavior
                         false // runForMatrixParent
                         ));
         FreeStyleBuild b = j.assertBuildStatusSuccess(p.scheduleBuild2(0));
         assertEquals(
-                Arrays.asList("Test2"),
+                List.of("Test2"),
                 Lists.transform(b.getActions(BadgeSummaryAction.class), AbstractBadgeAction::getText));
     }
 
     @Test
-    public void testRemoveSummaries() throws Exception {
+    void testRemoveSummaries() throws Exception {
         String template = "method org.jvnet.hudson.plugins.groovypostbuild.GroovyPostbuildRecorder$BadgeManager %s";
         ScriptApproval.get().approveSignature(template.formatted("removeSummaries"));
         ScriptApproval.get().approveSignature(template.formatted("createSummary java.lang.String"));
@@ -717,10 +706,10 @@ public class GroovyPostbuildRecorderTest {
                         new SecureGroovyScript(
                                 """
                                 manager.createSummary('attribute.png').appendText('Test1', false, false, false, 'Black');
-                                manager.removeSummaries();\
+                                manager.removeSummaries();
                                 """,
                                 true,
-                                Collections.<ClasspathEntry>emptyList()),
+                                Collections.emptyList()),
                         2, // behavior
                         false // runForMatrixParent
                         ));
@@ -730,14 +719,14 @@ public class GroovyPostbuildRecorderTest {
 
     @Test
     @Issue("JENKINS-54262")
-    public void testRunWithNonAdministrator() throws Exception {
+    void testRunWithNonAdministrator() throws Exception {
         FreeStyleProject p = j.createFreeStyleProject();
         p.getPublishersList()
                 .add(new GroovyPostbuildRecorder(
                         new SecureGroovyScript(
                                 "manager.addShortText('test1');",
                                 true, // sandbox
-                                Collections.<ClasspathEntry>emptyList()),
+                                Collections.emptyList()),
                         2, // behavior
                         false // runForMatrixParent
                         ));
@@ -748,10 +737,10 @@ public class GroovyPostbuildRecorderTest {
         authStrategy.grant(Item.BUILD).onRoot().to("alice");
         authStrategy.grant(Computer.BUILD).onRoot().to("alice");
 
-        Map<String, Authentication> authMap = new HashMap<>();
-        authMap.put(p.getFullName(), User.getById("alice", true).impersonate());
+        MockQueueItemAuthenticator authenticator = new MockQueueItemAuthenticator();
+        authenticator.authenticate(p.getFullName(), User.getById("alice", true).impersonate2());
         QueueItemAuthenticatorConfiguration.get().getAuthenticators().clear();
-        QueueItemAuthenticatorConfiguration.get().getAuthenticators().add(new MockQueueItemAuthenticator(authMap));
+        QueueItemAuthenticatorConfiguration.get().getAuthenticators().add(authenticator);
 
         j.assertBuildStatusSuccess(p.scheduleBuild2(0));
     }
